# Babel-synthesis

./: .gitignore  README.md
Doc/: Babel.mdj  BabelArchi.mdj  CodeDoc.md
Doc/Vcpkg/: Vcpkg.md
UML/: UML.md  UML.mdj
Vcpkg/: Vcpkg.md
audioPoc/: CMakeLists.txt  Makefile  README.md  Recorder.cpp  clean.sh  codec.cpp  test.cpp
audioPoc/PortAudio/: Makefile  Recorder.cpp  Recorder.py  main.c
audioPoc/PortAudio/include/: include.h
audioPoc/PortAudio/src/: PortAudio.c
src/: ANetwork.hpp  CMakeLists.txt  Client.cpp  Client.hpp  Core.cpp  Core.hpp  Makefile  Server.cpp  Server.hpp  SoundManager.cpp  SoundManager.hpp  TcpSocket.hpp  UdpSocket.cpp  UdpSocket.hpp  clean.sh
src/.qt/: QtDeploySupport.cmake
src/Babel_autogen/VO5QMHL5JN/: moc_GraphicSystem.cpp
src/Interface/: INetwork.cpp  INetwork.hpp  ISystem.cpp  ISystem.hpp
src/Systems/: EventSystem.hpp  GrapahicSystem.cpp  GrapahicSystem.hpp  GraphicSystem.cpp  GraphicSystem.hpp
src/client/: ANetwork.hpp  CMakeLists.txt  Client.cpp  Client.hpp  Core.cpp  Core.hpp  clean.sh
src/client/Interface/: ISystem.hpp
src/client/Systems/: EventSystem.cpp  GraphicSystem.cpp  GraphicSystem.hpp
src/server/: ANetwork.cpp  ANetwork.hpp  CMakeLists.txt  Core.cpp  Core.hpp  DataBase.json  JsonManager.cpp  JsonManager.hpp  Server.cpp  Server.hpp  TcpSocket.cpp  TcpSocket.hpp  clean.sh
src/server/Interface/: INetwork.hpp  ISoundManager.cpp  ISoundManager.hpp  ISystem.hpp
src/server/Systems/: EventSystem.hpp  GraphicSystem.cpp  GraphicSystem.hpp
